--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "^7.6.0",
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.0.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
         "react": "^16.9.0"
     },
     "peerDependencies": {
