--- a/package.json
+++ b/package.json
@@ -1,37 +1,92 @@
 {
-    "name": "react-drag-drop-browser",
-    "version": "2.0.1",
-    "description": "Simple, customizable react drag and drop component. Also has a file browser.",
-    "main": "dist/index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "prepublishOnly": "babel ./src --out-dir ./dist -s inline"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/chidimo/react-drag-drop-browser"
-    },
-    "keywords": [
-        "drag",
-        "drop",
-        "react",
-        "browse",
-        "drag-and-drop"
-    ],
-    "author": "Chidi Orji (orjichidi95@gmail.com)",
-    "license": "MIT",
-    "files": [
-        "dist/*"
-    ],
-    "devDependencies": {
-        "@babel/cli": "^7.6.0",
-        "@babel/core": "^7.6.0",
-        "@babel/preset-env": "^7.6.0",
-        "@babel/preset-react": "^7.0.0",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-        "react": "^16.9.0"
-    },
-    "peerDependencies": {
-        "react": "^16.12.0"
+  "name": "react-drag-drop-browser",
+  "version": "0.0.0-development",
+  "type": "module",
+  "description": "Simple, customizable components for selecting files, with drag and drop.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chidimo/react-drag-drop-browser"
+  },
+  "bugs": {
+    "url": "https://github.com/chidimo/react-drag-drop-browser"
+  },
+  "homepage": "https://github.com/chidimo/react-drag-drop-browser",
+  "keywords": [
+    "drag",
+    "drop",
+    "react",
+    "browse",
+    "drag-and-drop"
+  ],
+  "author": "Chidi Orji (orjichidi95@gmail.com)",
+  "license": "MIT",
+  "files": [
+    "dist/**/*",
+    "LICENSE",
+    "README.md"
+  ],
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/cjs/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/esm/types/index.d.ts",
+        "default": "./dist/esm/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/types/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
     }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "clean": "rimraf dist",
+    "copy-files": "shx cp src/styles.css dist/esm/styles.css",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p ./tsconfig.esm.json && mv dist/esm/index.js dist/esm/index.mjs",
+    "build:cjs": "tsc -p ./tsconfig.cjs.json",
+    "postbuild": "npm run copy-files",
+    "prepack": "npm run build",
+    "prepublishOnly": "yarn build",
+    "test": "jest",
+    "semantic-release": "semantic-release"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rimraf": "^6.0.1",
+    "semantic-release": "^24.0.0",
+    "shx": "^0.3.4",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  }
 }
